# Credit_score

./: .dockerignore  .drone.yml  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  docker-compose.yml.template  makefile
.github/workflows/: deploy.yml
backend/: Dockerfile  OpenAI.py  README copy.md  README.md  app.py  create_index.py  credit_score_demo.py  dummy.py  llm_utils.py  main.py  prompt_utils.py  pyproject.toml  requirements.txt  stat_score_util.py
backend/model/: classifier.jlb  credit_score_mul_lable_coldummy.jlb  credit_score_mul_lable_le.jlb  credit_score_mul_lable_model.jlb
data/: cc_products.json  cc_products_voyage.json
environments/: backend-prod.yaml  backend-staging.yaml  frontend-prod.yaml  frontend-staging.yaml
frontend/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/components/: Header.js  Layout.js  Login.js  Popup.js  ProfileSlider.js  Sidebar.js  Tabs.js  TextWithImage.js
frontend/components/InfoWizard/: InfoWizard.jsx  InfoWizard.module.css
frontend/config/: apiConfig.js
frontend/context/: AppContext.js
frontend/lib/: mongodb.ts
frontend/pages/: index.js  login.js
frontend/pages/api/: findOne.js  product-suggestions.js  query.js  transactions.js  updateOne.js
frontend/pages/api/credit-score/: [userId].js
frontend/pages/api/user-data/: find-one.js  update-one.js
frontend/styles/: Login.module.css  Popup.css  header.module.css  layout.module.css  sidebar.module.css  tabs.module.css
frontend/utils/api/credit-score/: api-client.js
frontend/utils/api/products/: api-client.js
frontend/utils/api/user-data/: api-client.js
model/: credit_score_mul_lable_ordenc.jlb
src/: README.md  requirements.txt
src/code/: app.py  model.py
src/model/: classifier.jlb
src/notebooks/: .env  load_data.ipynb  mdb-credit-worthy-genai.ipynb
