[tool.poetry]
authors = ["Julian Boronat <julian.boronat@mongodb.com>"]
description = "This repository contains a demo application showcasing the use of AI-driven alternative credit scoring."
license = "MIT"
name = "credit-scoring-app"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
InstructorEmbedding = "1.0.1"
Jinja2 = "3.1.3"
MarkupSafe = "2.1.5"
PyYAML = "6.0.1"
Pygments = "2.17.2"
SQLAlchemy = "2.0.28"
Werkzeug = "3.0.1"
aiohttp = "3.9.3"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
anyio = "4.3.0"
appnope = "0.1.4"
asttokens = "2.4.1"
attrs = "23.2.0"
blinker = "1.7.0"
cachetools = "5.3.3"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
comm = "0.2.2"
dataclasses-json = "0.6.4"
debugpy = "1.8.1"
decorator = "5.1.1"
distro = "1.9.0"
dnspython = "2.6.1"
executing = "2.0.1"
filelock = "3.13.1"
fireworks-ai = "0.13.0"
frozenlist = "1.4.1"
fsspec = "2024.2.0"
google-ai-generativelanguage = "0.4.0"
google-api-core = "2.17.1"
google-auth = "2.28.2"
google-generativeai = "0.4.1"
googleapis-common-protos = "1.63.0"
grpcio = "1.62.1"
grpcio-status = "1.62.1"
h11 = "0.14.0"
httpcore = "1.0.4"
httpx = "0.27.0"
httpx-sse = "0.4.0"
huggingface-hub = "0.21.4"
idna = "3.6"
ipykernel = "6.29.4"
ipython = "8.23.0"
itsdangerous = "2.1.2"
jedi = "0.19.1"
joblib = "1.3.2"
jsonpatch = "1.33"
jsonpointer = "2.4"
jupyter_client = "8.6.1"
jupyter_core = "5.7.2"
langchain = "0.1.11"
langchain-community = "0.0.33"
langchain-core = "0.1.43"
langchain-fireworks = "0.1.2"
langchain-google-genai = "0.0.11"
langchain-mongodb = "0.1.3"
langchain-openai = "0.1.3"
langchain-text-splitters = "0.0.1"
langsmith = "0.1.23"
marshmallow = "3.21.1"
matplotlib-inline = "0.1.7"
mpmath = "1.3.0"
multidict = "6.0.5"
mypy-extensions = "1.0.0"
nest-asyncio = "1.6.0"
networkx = "3.2.1"
nltk = "3.8.1"
numpy = "1.26.4"
openai = "1.13.3"
orjson = "3.9.15"
packaging = "23.2"
pandas = "2.2.1"
parso = "0.8.4"
pexpect = "4.9.0"
pillow = "10.2.0"
platformdirs = "4.2.0"
prompt-toolkit = "3.0.43"
proto-plus = "1.23.0"
protobuf = "4.25.3"
psutil = "5.9.8"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pyasn1 = "0.5.1"
pyasn1-modules = "0.3.0"
pydantic = "2.6.3"
pydantic_core = "2.16.3"
pymongo = "4.6.2"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.1"
pyzmq = "26.0.1"
regex = "2023.12.25"
requests = "2.31.0"
rsa = "4.9"
safetensors = "0.4.2"
scikit-learn = "1.3.0"
scipy = "1.12.0"
sentence-transformers = "2.2.2"
sentencepiece = "0.2.0"
six = "1.16.0"
sniffio = "1.3.1"
stack-data = "0.6.3"
sympy = "1.12"
tenacity = "8.2.3"
threadpoolctl = "3.3.0"
tiktoken = "0.6.0"
tokenizers = "0.15.2"
torch = "2.2.1"
torchvision = "0.17.1"
tornado = "6.4"
tqdm = "4.66.2"
traitlets = "5.14.3"
transformers = "4.38.2"
typing-inspect = "0.9.0"
typing_extensions = "4.10.0"
tzdata = "2024.1"
urllib3 = "2.2.1"
uvicorn = "0.32.0"
wcwidth = "0.2.13"
xgboost = "2.0.3"
yarl = "1.9.4"
fastapi = "^0.115.6"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"
pytest = "^7.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
